<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="adb.sanar.smp.MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView1"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:id="@+id/linearLayout">

        <ImageButton
            android:id="@+id/prev_btn"
            android:src="@drawable/prev"
            android:onClick="onClickPrev"
            android:scaleType="centerCrop"
            android:layout_marginStart="1dip"
            android:layout_gravity="center_vertical"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescPrevBtn"/>

        <ImageButton
            android:id="@+id/playPause_btn"
            android:src="@drawable/play"
            android:onClick="onClickPlay"
            android:scaleType="centerCrop"
            android:layout_marginStart="1dip"
            android:layout_gravity="center_vertical"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescPauseBtn"/>


        <ImageButton
            android:id="@+id/stop_btn"
            android:src="@drawable/stop"
            android:onClick="onClickStop"
            android:scaleType="centerCrop"
            android:layout_marginStart="1dip"
            android:layout_gravity="center_vertical"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDescStopBtn"/>
        <ImageButton
            android:id="@+id/next_btn"
            android:src="@drawable/next"
            android:onClick="onClickNext"
            android:scaleType="centerCrop"
            android:layout_marginStart="1dip"
            android:layout_gravity="center_vertical"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDesc_nextBtn"/>

        <ImageButton
            android:id="@+id/exist_btn"
            android:src="@drawable/exit"
            android:onClick="onClickCross"
            android:scaleType="centerCrop"
            android:layout_marginStart="1dip"
            android:layout_gravity="center_vertical"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDesc_exitBtn"/>

    </LinearLayout>

</RelativeLayout>
